--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,11 @@
-version: "3.5"
-
-services:
-  postgres:
-    image: library/postgres:10.7
-    container_name: db
-    restart: always
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: ${DATABASE_USER}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-    networks:
-      - test
-
-  keycloak:
-    image: jboss/keycloak
-    container_name: keycloak
-    restart: always
-    environment:
-      DB_VENDOR: POSTGRES
-      DB_ADDR: postgres
-      DB_DATABASE: keycloak
-      DB_USER: ${DATABASE_USER}
-      DB_PASSWORD: ${DATABASE_PASSWORD}
-      KEYCLOAK_USER: ${KEYCLOAK_USER}
-      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
-      KEYCLOAK_IMPORT: /tmp/realm-export.json
-    depends_on:
-      - postgres
-    ports:
-      - ${KEYCLOAK_PORT:-8080}:8080
-      - ${KEYCLOAK_PORT:-8443}:8443
-    networks:
-      - test
+version: '3'
 
 volumes:
-  postgres_data:
+  mysql_data:
+      driver: local
 
-networks:
-  test:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.5.0.0/16
-    name: test_net
+services:
+  flask-api:
+      image: flask-api:latest
+      ports: 
+        - 5000:5000
